<resources>
    <string name="app_name">MyPuppy</string>
    <string name="texto_tiulo">Bienvenido a MyPuppy</string>
    <string name="texto_boton_siguiente">Siguiente >></string>
    <string name="texto_fbt_agregar_click">Aun no se puede agregar, espere la siguiente version</string>
    <string name="app_name_favoritas">Mis Favoritas</string>
    <string name="app_name_about">Acerca de</string>
    <string name="app_name_contacto">Contactanos</string>
    <string name="text_very_soon">Muy Pronto</string>

    <!-- Menus -->
    <string name="menu_about">Acerca de</string>
    <string name="menu_settings">Configuraciones</string>
    <string name="menu_show_photo_pet">Ver Foto de Mascota</string>
    <string name="menu_delete_pet">Eliminar Mascota</string>
    <string name="menu_edit_pet">Editar Mascota</string>
    <string name="menu_add_pet">Agregar Mascota</string>

    <string name="menu_first_five">Primeros 5</string>
    <string name="menu_first_ten">Primeros 10</string>
    <string name="menu_action_refresh">Refrescar</string>

    <string name="text_nombre">Nombre: Omar Munguia R.</string>
    <string name="text_edad">Edad: 28 años</string>
    <string name="text_email">Email: omar-munguia@outlook.com</string>

    <string name="title_name">Introduce tu Nombre</string>
    <string name="title_email">Introduce tu Email</string>
    <string name="title_message">Introduce tu Mensaje</string>
    <string name="btn_send">Enviar</string>
    <string name="text_empty_fields_message">Los campos nombre, correo y mensaje son requeridos</string>
    <string name="text_send_email">Mensaje Enviado, Gracias :-)</string>
    <string name="text_go_to_back">Regresar</string>
    <string name="text_global_exception">Lo siento ocurrio un porblema, intente mas tarde</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
