<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.omunguia.mypuppy.AboutActivity">


    <include android:id="@+id/actionBarPuppy"
        layout="@layout/actionbar"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >
    </include>

    <TextView
        android:layout_marginTop="@dimen/margin_top_text"
        android:text="@string/text_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="@dimen/margin_top_text"
        android:text="@string/text_edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="@dimen/margin_top_text"
        android:text="@string/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
